src/objects/CH_ProductRelease__c.object
<CustomObject>
    <description>This custom object holds all the releases for a product, being interfaced from Enovia/EDP.</description>
    <fields>
        <fullName>CH_C1_ReadyForProgram__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>C1_ReadyForProgram</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CH_C2_ReadyForMarketing__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>C2_ReadyForMarketing</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CH_C3_ReadyForOffering__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>C3_ReadyForOffering</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CH_C4_ReadyForOrdering__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>C4_ReadyForOrdering</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CH_C5_ReleaseAvailable__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>C5_ReleaseAvailable</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CH_C6_ReadyForRampdown__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>C6_ReadyForRampdown</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CH_C7_EndOfMarketing__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>C7_EndOfMarketing</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CH_C8_EndOfOrdering__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>C8_EndOfOrdering</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CH_C9_EndOfDeliveries__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>C9_EndOfDeliveries</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CH_Lifecyclestatus__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Lifecyclestatus</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_NSNLegacyCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>NSNLegacyCode</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CH_NSNParentClassification__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNParentClassification</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_NSN_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSN Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Obsolete__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Obsolete</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CH_Parent_ReleaseId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Release</label>
        <referenceTo>CH_ProductRelease__c</referenceTo>
        <relationshipLabel>SW Releases</relationshipLabel>
        <relationshipName>SW_Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Releases</relationshipLabel>
        <relationshipName>Product_Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_Release_Id__c</fullName>
        <description>The Nokia Id for the release</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The Nokia Id for the release</inlineHelpText>
        <label>Release Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Summary__c</fullName>
        <description>The summary of the release</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The summary of the release</inlineHelpText>
        <label>Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CH_Type__c</fullName>
        <description>This field holds the different types that a release can have</description>
        <inlineHelpText>This field holds the different types that a release can have</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NSN Release</fullName>
                </value>
                <value>
                    <fullName>NSN Complementary Release</fullName>
                </value>
                <value>
                    <fullName>NSN Solution Release</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_Valid__c</fullName>
        <formula>( CH_Lifecyclestatus__c &lt;&gt; &apos;Obsolete&apos; &amp;&amp; CH_Lifecyclestatus__c &lt;&gt; &apos;Rejected&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CH Valid</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Release</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CH_NSNLegacyCode__c</columns>
        <columns>CH_Release_Id__c</columns>
        <columns>CH_Type__c</columns>
        <columns>CH_ProductId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Releases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>